# Nine-Morris-3D

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  DISTRIBUTION.md  HELP_LINUX.txt  README.md  README.txt  launcher_options.json  options.json
Nine-Morris-3D/: CMakeLists.txt
Nine-Morris-3D/src/: main.cpp  pch.hpp
Nine-Morris-3D/src/game/: assets.cpp  assets.h  assets_load.cpp  assets_load.h  game.cpp  game.h  game.hpp  game_context.cpp  game_context.h  game_options.cpp  game_options.h  game_position.cpp  game_position.h  global.hpp  heavy_resources.hpp  keyboard_controls.cpp  keyboard_controls.h  point_camera_controller.cpp  point_camera_controller.h  point_camera_controller.hpp  save_load.cpp  save_load.h  threefold_repetition_history.h  timer.cpp  timer.h  undo_redo_state.h
Nine-Morris-3D/src/game/entities/: board.cpp  board.h  node.h  piece.h
Nine-Morris-3D/src/game/minimax/: common.cpp  common.h  minimax_thread.cpp  minimax_thread.h
Nine-Morris-3D/src/game/post_processing/: blur.cpp  blur.h  blur.hpp  bright_filter.cpp  bright_filter.h  combine.cpp  combine.h
Nine-Morris-3D/src/game/scenes/: common.cpp  common.h  game_scene.cpp  game_scene.hpp  imgui_layer.h  jump_plus_variant_scene.cpp  jump_plus_variant_scene.h  jump_variant_scene.cpp  jump_variant_scene.h  loading_scene.cpp  loading_scene.h  scene_game.cpp  scene_game.h  standard_game_scene.cpp  standard_game_scene.h
Nine-Morris-3D/src/launcher/: launcher.cpp  launcher.h  launcher_options.cpp  launcher_options.h
Nine-Morris-3D/src/launcher/scenes/: launcher_scene.cpp  launcher_scene.h
Nine-Morris-3D/src/other/: constants.h  data.h  display_manager.cpp  display_manager.h  options.h  options_gracefully.h  save_load_gracefully.h
assets/: manifest
encrypter-helper/: CMakeLists.txt  encrypter-helper  main.cpp
encrypter_helper/: CMakeLists.txt  main.cpp
engine/: pch.h
networking/: CMakeLists.txt
networking/client/: CMakeLists.txt
networking/client/include/networking/: client.hpp
networking/client/src/: client.cpp  server_connection.cpp
networking/common/: CMakeLists.txt
networking/common/src/: connection.cpp  message.cpp
networking/include/networking/: server.hpp
networking/server/: CMakeLists.txt
networking/server/include/networking/: server.hpp
networking/server/src/: client_connection.cpp  pool.cpp  server.cpp
networking/src/: server.cpp
nine_morris_3d/: CMakeLists.txt
nine_morris_3d/cmake/: muhle_intelligence.cmake
nine_morris_3d/res/: nine_morris_3d.rc  translation.hpp
nine_morris_3d/src/: client.cpp  client.hpp  clock.cpp  clock.hpp  constants.hpp  default_address.hpp  enums.hpp  game.cpp  game.hpp  game_analysis.cpp  game_analysis.hpp  game_options.hpp  game_session.cpp  game_session.hpp  global.hpp  localization.cpp  localization.hpp  main.cpp  move_list.cpp  move_list.hpp  moves_list.cpp  moves_list.hpp  muhle_engine.cpp  muhle_engine.hpp  options.cpp  options.hpp  player_color.hpp  point_camera_controller.cpp  point_camera_controller.hpp  saved_games.cpp  saved_games.hpp  timer.cpp  timer.hpp  turn_indicator.cpp  turn_indicator.hpp  ui.cpp  ui.hpp  ver.hpp  window_size.hpp
nine_morris_3d/src/engines/: engine.cpp  engine.hpp  gbgp_engine.cpp  gbgp_engine.hpp  subprocess.cpp  subprocess.hpp
nine_morris_3d/src/game/: board.cpp  board.hpp  common.cpp  common.hpp  game.cpp  global.hpp  hoverable.hpp  jump_plus_variant_board.cpp  jump_plus_variant_board.hpp  jump_variant_board.cpp  jump_variant_board.hpp  nine_mens_morris_board.cpp  nine_mens_morris_board.hpp  node.cpp  node.hpp  piece.cpp  piece.hpp  point_camera_controller.cpp  ray.cpp  ray.hpp  standard_board.cpp  standard_board.hpp  standard_game_board.cpp  standard_game_board.hpp
nine_morris_3d/src/scenes/: game_scene.cpp  game_scene.hpp  jump_plus_variant_scene.cpp  jump_plus_variant_scene.hpp  jump_variant_scene.cpp  jump_variant_scene.hpp  loading_scene.cpp  loading_scene.hpp  nine_mens_morris_base_scene.cpp  nine_mens_morris_base_scene.hpp  nine_mens_morris_scene.cpp  nine_mens_morris_scene.hpp  standard_game_scene.cpp  standard_game_scene.hpp  twelve_mens_morris_scene.hpp
nine_morris_3d_engine/: CMakeLists.txt  specification.md
nine_morris_3d_engine/cmake/: assimp.cmake  dear_imgui.cmake  glfw.cmake  openal_soft.cmake  sdl.cmake  sdl_mixer.cmake  stb.cmake
nine_morris_3d_engine/include/engine/: nine_morris_3d.hpp  prelude.hpp
nine_morris_3d_engine/include/nine_morris_3d_engine/: entry_point.hpp  nine_morris_3d.hpp
nine_morris_3d_engine/src/: pch.hpp
nine_morris_3d_engine/src/application/: application.cpp  capabilities.cpp  context.cpp  crash.cpp  file_system.cpp  input.cpp  input_codes.cpp  logging_base.cpp  monitors.cpp  scene.cpp  tasks.cpp  window.cpp
nine_morris_3d_engine/src/application_base/: application.cpp  application_builder.cpp  capabilities.cpp  context.cpp  events.cpp  file_system.cpp  input.cpp  logging.cpp  logging_base.cpp  panic.cpp  tasks.cpp  window.cpp
nine_morris_3d_engine/src/audio/: context.cpp  music.cpp  music_track.cpp  sound_data.cpp
nine_morris_3d_engine/src/engine/: engine_application.h  engine_audio.h  engine_entry_point.h  engine_graphics.h  engine_other.h  engine_scene.h
nine_morris_3d_engine/src/graphics/: camera.cpp  dear_imgui_context.cpp  debug_ui.cpp  font.cpp  gui.cpp  identifier.cpp  imgui_context.cpp  material.cpp  mesh.cpp  post_processing_step.cpp  renderer.cpp  scene.cpp  screen.cpp  shader_library.cpp  texture_data.cpp  vertex_buffer_layout.cpp
nine_morris_3d_engine/src/other/: dependencies.cpp  encrypt.cpp  file_system.cpp  localization.cpp  logging.cpp  mesh.cpp  random_gen.cpp  resource_manager.cpp  resources_cache.cpp  utilities.cpp
nine_morris_3d_engine/src/scene/: object_manager.cpp  scene_list.cpp
nine_morris_3d_server/: CMakeLists.txt
nine_morris_3d_server/src/: clock.cpp  clock.hpp  configuration.cpp  configuration.hpp  daemon.cpp  daemon.hpp  game_session.hpp  main.cpp  periodic_task.cpp  periodic_task.hpp  platform.hpp  server.cpp  server.hpp  session_pool.cpp  session_pool.hpp  task_manager.cpp  task_manager.hpp  ver.hpp
(+1151 files in other folders)
